# starter-builder

./: .gitignore  dodo.py  get_status.py  get_templates_matrix.py  projects.yaml  pyproject.toml  run.yaml  scratch.yaml  slack_notifier.py  test.py  test.sh  wait_for_activity_complete.sh
.github/workflows/: operations.yaml  run.yaml
project/: __init__.py
templates/hugo/files/: .platform.app.yaml
