[tool.poetry]
name = "starter-builder"
version = "0.1.0"
description = "Update manager for Platform.sh templates"
authors = ["Platform.sh"]
license = "MIT"

[tool.poetry.dependencies]
python = "!=2.7.*, ^3.8"
doit = "^0.33.1"
packaging = "^20.4"
requests = "^2.26.0"
slack-sdk = "^3.11.2"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
